--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,3 +8,4 @@ fastapi[standard]==0.112.0 # Update version in README.md as well
 pillow==10.4.0
 sqlmodel==0.0.21
 yt-dlp==2024.8.1
+plexapi==4.15.15
